--- a/.html
+++ b/.html
@@ -1019,13 +1019,7 @@
                     <div class="skill-item">
                         <h4><i class="fab fa-python"></i> Python Essential 1</h4>
                         <p>Completed foundational Python programming course covering core syntax, data types, and control flow by [Provider Name, e.g., Cisco Networking Academy].</p>
-<a href="https://ibb.co/HT96kkcx">
-  <img 
-    src="https://i.ibb.co/s9XnMMT6/Whats-App-Image-2025-05-20-at-13-35-06-837b369d.jpg" 
-    alt="Python Essential 1 Badge" 
-    onerror="this.onerror=null; this.src='https://placehold.co/300x150/2a2a34/b0b0b0?text=Image+Not+Found';" 
-    border="0">
-</a>
+ <img src="https://ibb.co/HT96kkcx" alt="Python Essential 1 Badge" onerror="this.onerror=null; this.src='https://placehold.co/300x150/2a2a34/b0b0b0?text=Image+Not+Found';">
                         <a href="#" target="_blank">View Credential</a> </div>
                     <div class="skill-item">
                         <h4><i class="fab fa-python"></i> Python Essential 2</h4>
